--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 
 h1 {
   background-color: gray;
+  opacity: 0.95;
   color: greenyellow;
   border-radius: 15px;
   background-size: 0 auto;
@@ -27,6 +28,7 @@ dl {
 
 h2 home{
   background-color: darkgrey;
+  opacity: 0.95;
 }
 
 img {
@@ -42,6 +44,7 @@ img {
 
 .search-section {
   background-color: gray;
+  opacity: 0.95;
   text-align: 0 auto;
   padding: 2%;
   width: 60%;
@@ -62,7 +65,5 @@ footer {
   background-size: cover;
   margin: 5%;
   background-size: 0 auto;
-}
-
-p {
+  opacity: 0.95;
 }
