--- a/style.css
+++ b/style.css
@@ -67,3 +67,13 @@ footer {
   background-size: 0 auto;
   opacity: 0.95;
 }
+
+div {
+  background-color: gray;
+  opacity: 0.95;
+  text-align: 0 auto;
+  padding: 2%;
+  width: 60%;
+  transform: translate(28.1%, -10%);
+  border-radius: 5%;
+}
